# LV-ML

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md  title.xlsx
data/150-250/: CSV1.csv  CSV3.csv  CSV5.csv  CSV6.csv  CSV7.csv  all.csv  all_current_minus_Air_frequency_MHz_linear.xlsx  all_current_minus_Water_frequency_MHz_linear.xlsx
data/350/: CSV0.csv  CSV2.csv  CSV6.csv  CSV7.csv  all.csv  all_latest_Air_nothing_only_MHz_linear.xlsx  all_latest_plots_corresponding_tables.xlsx
data/50-150/: All_minus_Air_frequency_MHz_linear.xlsx  CSV2.csv  CSV4.csv
data/analysis/: key_frequency_band_anova.csv  key_frequency_band_data.csv  key_frequency_band_metrics.csv  key_frequency_frequency_separability.csv  key_frequency_pairwise_distances.csv
data/analysis/visualization/: feature_info.csv  frequency_correlation.csv  high_correlation_pairs.csv  pca_explained_variance.csv  pca_scores.csv  selected_frequency_features.csv  tsne_scores.csv  umap_scores.csv
data/features/: full_spectrum_y.csv  statistical_features.csv
data/processed/: preprocessed_spectra.csv
data/raw/350/: CSV1.csv
data/raw/50-150/: CSV1.csv  CSV3.csv
data/splits/: split_status.csv
data/splits/full_spectrum/: test_features.csv  test_y.csv  train_X.csv
data/water/: raw_trace_index.csv
docs/: 实验步骤.md  数据采集方案.md  需求分析.md
liquid-identification/: main.py
liquid-identification/liquid_identification/: feature_extraction.py  preprocessing.py
liquid_identification/: __init__.py  data_loader.py  dataset_split.py  key_frequency_analysis.py  visualization_analysis.py
(+771 files in other folders)
